HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/BitcopyDropConflict/Source/Main.uv
//! Rejected polymorphism specimen for a BitcopyType and DropType conflict.

internal record BitcopyDropConflictOwner {
    internal value: i32

    internal procedure drop(~!) -> () {
    }
}
